Header section style done

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
           </ul>
         </div>
       </nav>
+
+      <div class="banner">
+        <div class="container header_container">
+          <div class="header_container_wraper">
+            <div class="header_text">
+              <h1 class="header_title">
+                Lessons and insights <span>from 8 years</span>
+              </h1>
+              <p class="header_description">
+                Where to grow your business as a photographer: site or social
+                media?
+              </p>
+              <a href="#" class="header_btn">Register</a>
+            </div>
+            <div class="header_img">
+              <img src="./images/hero.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
