Client and Services section added using grid

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Where to grow your business as a photographer: site or social
                 media?
               </p>
-              <a href="#" class="header_btn">Register</a>
+              <a class="header_btn" href="#">Register</a>
             </div>
             <div class="header_img">
               <img src="./images/hero.png" alt="" />
@@ -44,5 +44,77 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <section class="section">
+        <div class="container clients_container">
+          <div class="section_header">
+            <h2 class="section_title">Our Clients</h2>
+            <p class="section_text">
+              We have been working with some Fortune 500+ clients
+            </p>
+          </div>
+          <div class="clients_wraper">
+            <img class="client_logo" src="./images/Logo.png" alt="" />
+            <img class="client_logo" src="./images/Logo(1).png" alt="" />
+            <img class="client_logo" src="./images/Logo(2).png" alt="" />
+            <img class="client_logo" src="./images/Logo(3).png" alt="" />
+            <img class="client_logo" src="./images/Logo(4).png" alt="" />
+            <img class="client_logo" src="./images/Logo(5).png" alt="" />
+            <img class="client_logo" src="./images/Logo(6).png" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container services_container">
+          <div class="section_header">
+            <h2 class="section_title">
+              Manage your entire community <br />
+              in a single system
+            </h2>
+            <p class="section_text">Who is Nextcent suitable for?</p>
+          </div>
+          <div class="services">
+            <div class="service">
+              <img class="logo" src="./images/Icon.png" alt="" />
+              <h3 class="service_title">
+                Membership <br />
+                Organisations
+              </h3>
+              <p class="service_text">
+                Our membership management <br />
+                software provides full automation of <br />
+                membership renewals and payments
+              </p>
+            </div>
+            <div class="service">
+              <img class="logo" src="./images/Icon(1).png" alt="" />
+              <h3 class="service_title">
+                National <br />
+                Associations
+              </h3>
+              <p class="service_text">
+                Our membership management <br />
+                software provides full automation of <br />
+                membership renewals and payments
+              </p>
+            </div>
+            <div class="service">
+              <img class="logo" src="./images/Icon(2).png" alt="" />
+              <h3 class="service_title">
+                Clubs <br />
+                And Groups
+              </h3>
+              <p class="service_text">
+                Our membership management <br />
+                software provides full automation of <br />
+                membership renewals and payments
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section"></section>
+    </main>
   </body>
 </html>
