Help section added with using flex and grid

--- a/index.html
+++ b/index.html
@@ -114,6 +114,71 @@
           </div>
         </div>
       </section>
+      <section class="section">
+        <div class="container experience_container">
+          <div class="experience_img">
+            <img src="./images/Frame35.png" alt="" />
+          </div>
+          <div class="experience_text">
+            <h3 class="experience_title">
+              The unseen of spending three years at Pixelgrade
+            </h3>
+            <p class="experience_description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+              amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+              Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+              tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+              Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+              elementum pulvinar odio.
+            </p>
+            <a href="#" class="experience_btn">Learn More</a>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="help">
+          <div class="container help_container">
+            <div class="help_heading">
+              <h3 class="help_title">
+                Helping a local <span>business reinvent itself</span>
+              </h3>
+              <p class="help_text">
+                We reached here with our hard work and dedication
+              </p>
+            </div>
+            <div class="help_content">
+              <div class="help_item">
+                <img src="./images/helpicon/Icon(3).png" alt="" />
+                <div class="help_item_text">
+                  <h2 class="help_item_title">2,245,341</h2>
+                  <div class="help_item_description">Members</div>
+                </div>
+              </div>
+              <div class="help_item">
+                <img src="./images/helpicon/Icon(4).png" alt="" />
+                <div class="help_item_text">
+                  <h2 class="help_item_title">46,328</h2>
+                  <div class="help_item_description">Clubs</div>
+                </div>
+              </div>
+              <div class="help_item">
+                <img src="./images/helpicon/Icon(5).png" alt="" />
+                <div class="help_item_text">
+                  <h2 class="help_item_title">828,867</h2>
+                  <div class="help_item_description">Event Bookings</div>
+                </div>
+              </div>
+              <div class="help_item">
+                <img src="./images/helpicon/Icon(6).png" alt="" />
+                <div class="help_item_text">
+                  <h2 class="help_item_title">1,926,436</h2>
+                  <div class="help_item_description">Payments</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section"></section>
     </main>
   </body>
