just add another section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,27 @@
           </div>
         </div>
       </section>
+      <section class="section">
+        <div class="container experience_container">
+          <div class="experience_img">
+            <img src="./images/pana.png" alt="" />
+          </div>
+          <div class="experience_text">
+            <h3 class="experience_title">
+              The unseen of spending three years at Pixelgrade
+            </h3>
+            <p class="experience_description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit
+              amet justo ipsum. Sed accumsan quam vitae est varius fringilla.
+              Pellentesque placerat vestibulum lorem sed porta. Nullam mattis
+              tristique iaculis. Nullam pulvinar sit amet risus pretium auctor.
+              Etiam quis massa pulvinar, aliquam quam vitae, tempus sem. Donec
+              elementum pulvinar odio.
+            </p>
+            <a href="#" class="experience_btn">Learn More</a>
+          </div>
+        </div>
+      </section>
       <section class="section"></section>
     </main>
   </body>
