--- a/index.html
+++ b/index.html
@@ -203,7 +203,99 @@
           </div>
         </div>
       </section>
-      <section class="section"></section>
+      <section class="section">
+        <div class="testimonial">
+          <div class="container testimonial_containner">
+            <div class="test_img">
+              <img src="./images/tesla.png" alt="" />
+            </div>
+            <div class="test_content">
+              <p class="test_p">
+                Maecenas dignissim justo eget nulla rutrum molestie. Maecenas
+                lobortis sem dui, vel rutrum risus tincidunt ullamcorper. Proin
+                eu enim metus. Vivamus sed libero ornare, tristique quam in,
+                gravida enim. Nullam ut molestie arcu, at hendrerit elit. Morbi
+                laoreet elit at ligula molestie, nec molestie mi blandit.
+                Suspendisse cursus tellus sed augue ultrices, quis tristique
+                nulla sodales. Suspendisse eget lorem eu turpis vestibulum
+                pretium. Suspendisse potenti. Quisque malesuada enim sapien,
+                vitae placerat ante feugiat eget. Quisque vulputate odio neque,
+                eget efficitur libero condimentum id. Curabitur id nibh id sem
+                dignissim finibus ac sit amet magna.
+              </p>
+              <h4 class="test_name">Tim Smith</h4>
+              <p class="test_designation">
+                British Dragon Boat Racing Association
+              </p>
+              <div class="test_logos">
+                <img class="test_logo" src="./images/Logo.png" alt="" />
+                <img class="test_logo" src="./images/Logo(1).png" alt="" />
+                <img class="test_logo" src="./images/Logo(2).png" alt="" />
+                <img class="test_logo" src="./images/Logo(3).png" alt="" />
+                <img class="test_logo" src="./images/Logo(4).png" alt="" />
+                <img class="test_logo" src="./images/Logo(5).png" alt="" />
+                <img class="test_logo" src="./images/Logo(6).png" alt="" />
+                <a class="test_link" href="">Meet all customers &rarr;</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container blog_container">
+          <div class="section_header">
+            <h2 class="section_title">Caring is the new marketing</h2>
+            <p class="section_text">
+              The Nexcent blog is the best place to read about the latest
+              membership insights, <br />
+              trends and more. See who's joining the community, read about how
+              our community <br />
+              are increasing their membership income and lot's more.
+            </p>
+          </div>
+          <div class="blogs">
+            <div class="blog_items">
+              <img src="./images/image1.png" alt="" />
+              <div class="blog_body">
+                <h2 class="blog_title">
+                  Creating Streamlined Safeguarding Processes with OneRen
+                </h2>
+                <a class="blog_link" href="#">Readmore &rarr;</a>
+              </div>
+            </div>
+            <div class="blog_items">
+              <img src="./images/image2.png" alt="" />
+              <div class="blog_body">
+                <h2 class="blog_title">
+                  What are your safeguarding responsibilities and how can you
+                  manage them?
+                </h2>
+                <a class="blog_link" href="#">Readmore &rarr;</a>
+              </div>
+            </div>
+            <div class="blog_items">
+              <img src="./images/image3.png" alt="" />
+              <div class="blog_body">
+                <h2 class="blog_title">
+                  Revamping the Membership Model with Triathlon Australia
+                </h2>
+                <a class="blog_link" href="#">Readmore &rarr;</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="demo">
+          <div class="container demo_container">
+            <h1 class="demo_title">
+              Pellentesque suscipit <br />
+              fringilla libero eu.
+            </h1>
+            <a href="" class="demo_btn"> Get a demo &rarr;</a>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
