footer section added and style in css

--- a/index.html
+++ b/index.html
@@ -297,5 +297,88 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="container footer_continer">
+        <div class="footer_items">
+          <a href="#" class="footer_logo">Nexcent</a>
+          <p class="footer_copy_one footer_copy">
+            Copyright © 2023 Nexcent ltd.
+          </p>
+          <p class="footer_copy_two footer_copy">All rights reserved</p>
+          <div class="footer_social_links_container">
+            <img
+              class="footer_social_link"
+              src="./images/socialicon/SocialIcon1.svg"
+              alt=""
+            />
+            <img
+              class="footer_social_link"
+              src="./images/socialicon/SocialIcons2.svg"
+              alt=""
+            />
+            <img
+              class="footer_social_link"
+              src="./images/socialicon/SocialIcons3.svg"
+              alt=""
+            />
+            <img
+              class="footer_social_link"
+              src="./images/socialicon/SocialIcons4.svg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="footer_items">
+          <h4 class="footer_items_title">Company</h4>
+          <a href="" class="footer_item_link">
+            <p class="company_item_list footer_item_name">About Us</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="company_item_list footer_item_name">Blog</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="company_item_list footer_item_name">Contact Us</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="company_item_list footer_item_name">Pricing</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="company_item_list footer_item_name">Testimonials</p>
+          </a>
+        </div>
+        <div class="footer_items">
+          <h4 class="footer_items_title">Support</h4>
+          <a href="" class="footer_item_link">
+            <p class="support_item_list footer_item_name">Help Center</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="support_item_list footer_item_name">Terms of service</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="support_item_list footer_item_name">Legal</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="support_item_list footer_item_name">Privacy policy</p>
+          </a>
+          <a href="" class="footer_item_link">
+            <p class="support_item_list footer_item_name">Status</p>
+          </a>
+        </div>
+        <div class="footer_items">
+          <h4 class="footer_items_title">Stay up to date</h4>
+          <input
+            class="footer_email_input"
+            type="email"
+            name=""
+            id=""
+            placeholder="Your email address....."
+          />
+          <a href=""
+            ><img class="email_send" src="./images/socialicon/send.svg" alt=""
+          /></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
