Fix footer section style

--- a/index.html
+++ b/index.html
@@ -307,27 +307,35 @@
           </p>
           <p class="footer_copy_two footer_copy">All rights reserved</p>
           <div class="footer_social_links_container">
-            <img
-              class="footer_social_link"
-              src="./images/socialicon/SocialIcon1.svg"
-              alt=""
-            />
-            <img
-              class="footer_social_link"
-              src="./images/socialicon/SocialIcons2.svg"
-              alt=""
-            />
-            <img
-              class="footer_social_link"
-              src="./images/socialicon/SocialIcons3.svg"
-              alt=""
-            />
-            <img
-              class="footer_social_link"
-              src="./images/socialicon/SocialIcons4.svg"
-              alt=""
-            />
-          </div>
+            <a href="">
+              <img
+                class="footer_social_link"
+                src="./images/socialicon/SocialIcon1.svg"
+                alt=""
+              />
+            </a>
+            <a href="">
+              <img
+                class="footer_social_link"
+                src="./images/socialicon/SocialIcons2.svg"
+                alt=""
+              />
+            </a>
+            <a href="">
+              <img
+                class="footer_social_link"
+                src="./images/socialicon/SocialIcons3.svg"
+                alt=""
+              />
+            </a>
+            <a href="">
+              <img
+                class="footer_social_link"
+                src="./images/socialicon/SocialIcons4.svg"
+                alt=""
+              />
+                        </div>
+            </a>
         </div>
         <div class="footer_items">
           <h4 class="footer_items_title">Company</h4>
